--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0; padding: 0;
       font-family: 'Orbitron', sans-serif;
-      background-image: url('95da1295673f2bd19a23f3b61ea240a9.jpg');
+      background-image: url('');
       background-size: cover;
       background-position: center;
       color: #fff;
