--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0; padding: 0;
       font-family: 'Orbitron', sans-serif;
-      background-image: url('');
+      background-image: url('IMG_0386.jpeg');
       background-size: cover;
       background-position: center;
       color: #fff;
