--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0; padding: 0;
       font-family: 'Orbitron', sans-serif;
-      background-image: url('05BB887D-D374-48AD-8526-6F0AB771D09E.jpeg');
+      background-image: url('download.jpeg');
       background-size: cover;
       background-position: center;
       color: #fff;
