--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     body {
       margin: 0; padding: 0;
       font-family: 'Orbitron', sans-serif;
-      background-image: url('95da1295673f2bd19a23f3b61ea240a9.jpg');
-      background-size: cover;
-      background-position: center;
+       background-color: #000; /* solid black background */
       color: #fff;
       overflow-x: hidden;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
     }
     .overlay {
       background-color: rgba(0, 0, 0, 0.85);
