--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     /* Header */
     header {
       padding: 1.5rem 1rem;
-      background-color: #251249;
+      background-color: #b89bf0;
       border-bottom: 1px solid #6b5b8a;
       position: sticky;
       top: 0;
@@ -226,7 +226,7 @@
         left: 1rem;
         top: 50%;
         transform: translateY(-50%);
-        color: #ff9f40;
+        color: #7286f7;
         font-weight: 700;
         text-transform: uppercase;
         font-size: 0.8rem;
