--- a/index.html
+++ b/index.html
@@ -317,23 +317,34 @@
           <tr class="team-row" data-team="BIHARI" tabindex="0" role="row">
             <td data-label="Rank">2</td>
             <td data-label="Team">BIHARI</td>
-            <td data-label="Chicken Dinners">1</td>
-            <td data-label="Position Points">20</td>
+            <td data-label="Chicken Dinners">0</td>
+            <td data-label="Position Points">10</td>
             <td data-label="Kill Points">15</td>
-            <td data-label="Total Points">36</td>
+            <td data-label="Total Points">25</td>
           </tr>
           <tr class="expand" data-parent="BIHARI"><td colspan="6">Blaze (6 kills)</td></tr>
           <tr class="expand" data-parent="BIHARI"><td colspan="6">Shubh (4 kills)</td></tr>
           <tr class="expand" data-parent="BIHARI"><td colspan="6">Zaryab (2 kills)</td></tr>
           <tr class="expand" data-parent="BIHARI"><td colspan="6">No face (0 kills)</td></tr>
-
-          <tr class="team-row" data-team="PUNJAB" tabindex="0" role="row">
+          <tr class="team-row" data-team="RAJASTHAN" tabindex="0" role="row">
             <td data-label="Rank">3</td>
+            <td data-label="Team">RAJASTHAN</td>
+            <td data-label="Chicken Dinners">0</td>
+            <td data-label="Position Points">22</td>
+            <td data-label="Kill Points">1</td>
+            <td data-label="Total Points">23</td>
+          </tr>
+          <tr class="expand" data-parent="RAJASTHAN"><td colspan="3">Varun (1 kill)</td></tr>
+          <tr class="expand" data-parent="RAJASTHAN"><td colspan="3">Shaka (0 kills)</td></tr>
+          <tr class="expand" data-parent="RAJASTHAN"><td colspan="3">Toxic hell (0 kills)</td></tr>
+          <tr class="expand" data-parent="RAJASTHAN"><td colspan="3">Neha (0 kills)</td></tr>
+          <tr class="team-row" data-team="PUNJAB" tabindex="0" role="row">
+            <td data-label="Rank">4</td>
             <td data-label="Team">PUNJAB</td>
-            <td data-label="Chicken Dinners">1</td>
-            <td data-label="Position Points">21</td>
-            <td data-label="Kill Points">10</td>
-            <td data-label="Total Points">32</td>
+            <td data-label="Chicken Dinners">0</td>
+            <td data-label="Position Points">8</td>
+            <td data-label="Kill Points">12</td>
+            <td data-label="Total Points">20</td>
           </tr>
           <tr class="expand" data-parent="PUNJAB"><td colspan="6">Harry (6 kills)</td></tr>
           <tr class="expand" data-parent="PUNJAB"><td colspan="6">Gabru (2 kills)</td></tr>
@@ -341,12 +352,12 @@
           <tr class="expand" data-parent="PUNJAB"><td colspan="6">Money (2 kills)</td></tr>
 
           <tr class="team-row" data-team="CHENNAI" tabindex="0" role="row">
-            <td data-label="Rank">4</td>
+            <td data-label="Rank">5</td>
             <td data-label="Team">CHENNAI</td>
-            <td data-label="Chicken Dinners">1</td>
-            <td data-label="Position Points">17</td>
-            <td data-label="Kill Points">7</td>
-            <td data-label="Total Points">25</td>
+            <td data-label="Chicken Dinners">0</td>
+            <td data-label="Position Points">13</td>
+            <td data-label="Kill Points">3</td>
+            <td data-label="Total Points">16</td>
           </tr>
           <tr class="expand" data-parent="CHENNAI"><td colspan="6">Rusher (2 kills)</td></tr>
           <tr class="expand" data-parent="CHENNAI"><td colspan="6">Devil (1 kill)</td></tr>
@@ -354,37 +365,27 @@
           <tr class="expand" data-parent="CHENNAI"><td colspan="6">Aghakhan (0 kills)</td></tr>
 
           <tr class="team-row" data-team="HYDERABAD" tabindex="0" role="row">
-            <td data-label="Rank">5</td>
+            <td data-label="Rank">6
+            </td>
             <td data-label="Team">HYDERABAD</td>
-            <td data-label="Chicken Dinners">1</td>
-            <td data-label="Position Points">16</td>
-            <td data-label="Kill Points">4</td>
-            <td data-label="Total Points">20</td>
+            <td data-label="Chicken Dinners">0</td>
+            <td data-label="Position Points">14</td>
+            <td data-label="Kill Points">1</td>
+            <td data-label="Total Points">15</td>
           </tr>
           <tr class="expand" data-parent="HYDERABAD"><td colspan="6">Death queen (1 kill)</td></tr>
           <tr class="expand" data-parent="HYDERABAD"><td colspan="6">Moin (0 kills)</td></tr>
           <tr class="expand" data-parent="HYDERABAD"><td colspan="6">Justned (0 kills)</td></tr>
 
-          <tr class="team-row" data-team="RAJASTHAN" tabindex="0" role="row">
-            <td data-label="Rank">6</td>
-            <td data-label="Team">RAJASTHAN</td>
-            <td data-label="Chicken Dinners">0</td>
-            <td data-label="Position Points">11</td>
-            <td data-label="Kill Points">5</td>
-            <td data-label="Total Points">16</td>
-          </tr>
-          <tr class="expand" data-parent="RAJASTHAN"><td colspan="6">Varun (1 kill)</td></tr>
-          <tr class="expand" data-parent="RAJASTHAN"><td colspan="6">Shaka (0 kills)</td></tr>
-          <tr class="expand" data-parent="RAJASTHAN"><td colspan="6">Toxic hell (0 kills)</td></tr>
-          <tr class="expand" data-parent="RAJASTHAN"><td colspan="6">Neha (0 kills)</td></tr>
+          
 
           <tr class="team-row" data-team="UNKNOWN" tabindex="0" role="row">
             <td data-label="Rank">7</td>
             <td data-label="Team">UNKNOWN</td>
             <td data-label="Chicken Dinners">0</td>
-            <td data-label="Position Points">2</td>
+            <td data-label="Position Points">0</td>
             <td data-label="Kill Points">0</td>
-            <td data-label="Total Points">2</td>
+            <td data-label="Total Points">0</td>
           </tr>
           <tr class="expand" data-parent="UNKNOWN"><td colspan="6">Khushi (0 kills)</td></tr>
         </tbody>
